# wingwalker-pypi

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pkg-README.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: conf.py  index.rst
examples/: .gitignore  README.md
examples/display/: preview_point_cloud.py
examples/io/: persist_wing_request.py
examples/printables/: elliptical_left_wing_256mm.json  gen_stl_script.py  generate_ply.py
examples/svg/: create_airfoil_svg.py
src/wingwalker/: __init__.py  base.py  lednicer.py  output_templates.py  selig.py  svg.py  utils.py
src/wingwalker/build_params/: __init__.py  wing_request.py
src/wingwalker/generators/: __init__.py  elliptical.py  geometric.py  iterators.py  rectangular.py  wing.py
src/wingwalker/io/: __init__.py  exports.py  specs.py
src/wingwalker/models/: __init__.py  airfoil_section.py  airfoil_specs.py  enums.py  full_wing.py  sectioned_wing.py  wing_model.py  wing_section.py
src/wingwalker/processing/: __init__.py  mesh.py
src/wingwalker/templates/: svg.tpl
tests/: conftest.py  test_lednicer.py  test_selig.py  test_svg.py  utilities.py
tests/imagery/: test_plotting.py  test_svg.py
tests/io/: test_exports.py  test_modeling.py  test_point_clouds.py
tests/parsing/: test_lednicer.py
tests/setup/: config_dirs.py  config_tests.py
wingwalker/: __init__.py  base.py  lednicer.py  output_templates.py  selig.py  svg.py  svg_utils.py  utils.py
