[project]
name = "wingwalker"
version = "0.1.4"
description = "Wingwalker Airfoil and Wing Design Tools'"
authors = [
  { name="David Days", email="david.c.days@gmail.com" },
]
license = "MIT"
readme = "Pkg-README.md"
repository = "https://github.com/david-days/wingwalker-pypi"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest'
]

[project.urls]
Homepage = "https://github.com/david-days/wingwalker-pypi"
Issues = "https://github.com/david-days/wingwalker-pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/wingwalker"
]

[tool.pytest.ini_options]
addopts = [
    "-s"
]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "svg: mark a test as targeting image generation and steps",
    "io: mark a test as targeting file IO",
    "analytics: mark a test as testing data analytics",
    "testing: mark a test as targeting infrastructure (software, libraries, network connectivity, etc)"
]


